<resources>
    <string name="app_name">烟叶生产标准化系统</string>
    <string name="daohang_chanqianzhunbei">产前准备</string>
    <string name="daohang_shengchanguanli">生产管理</string>
    <string name="daohang_zonghexinxi">综合信息</string>
    <string name="daohang_wodeshezhi">我的设置</string>
    <string name="frmFirstWanggehuaguanli">网格化管理</string>
    <string name="frmFirstYannongguanli">烟农管理</string>
    <string name="frmFirstYumiaohuguanli">育苗户管理</string>
    <string name="frmFirstWuziguanli">物资管理</string>
    <string name="frmFirstWGHytgh">烟田规划</string>
    <string name="frmFirstWGHjcss">基础设施</string>
    <string name="frmFirstWGHtrjc">土壤检测</string>
    <string name="frmFirstWGHyylh">烟叶理化</string>
    <string name="frmFirstYNynda">烟农档案</string>
    <string name="frmFirstYNytda">烟田档案</string>
    <string name="frmFirstYNzzsp">种植审批</string>
    <string name="frmFirstYNhtgl">草签合同</string>
    <string name="frmFirstYMHymh">育苗户</string>
    <string name="frmFirstYMHymgc">育苗工场</string>
    <string name="frmFirstYMHymsp">育苗审批</string>
    <string name="frmFirstWZwzsp">物资审批</string>
    <string name="frmFirstWZwzff">物资发放</string>
    <string name="Login_hintName">请输入用户名/手机号</string>
    <string name="Login_hintPassword">请输入6位密码</string>
    <string name="Login_login">登录</string>
    <string name="frmFirst">请输入</string>
    <string name="frmFirst.inputTime">登记时间：</string>
    <string name="frmFirst.selectTime">请选择时间</string>
    <string name="frmFirst.beizhu">备注信息：</string>
    <string name="frmFirst.hintbeizhu">请输入备注信息</string>
    <string name="frmFirst.stop">烟站:</string>
    <string name="frmFirst.HomeAddress">行政区划:</string>
    <string name="frmFirst.yanjiyuan">烟技员：</string>
    <string name="frmFirstYNhtgl.yanyeType">烟叶品种：</string>
    <string name="frmFirst.yewuYear">业务年度：</string>
    <string name="frmFirstWGjcss.village">村名：</string>
    <string name="frmFirstWGjcss.kaofangNum">烤房数(个)：</string>
    <string name="frmFirstWGjcss.hintkaofangNum">输入烤房数量</string>
    <string name="frmFirstWGjcss.jijingNum">机井数(口)：</string>
    <string name="frmFirstWGjcss.hintjijingNum">输入机井数量</string>
    <string name="frmFirstWGytgh.village">村名：</string>
    <string name="frmFirstWGytgh.guhuaniandu">规划年度：</string>
    <string name="frmFirstWGytgh.mianji">规划面积（亩）：</string>
    <string name="frmFirstWGytgh.hintmianji">输入规划面积</string>
    <string name="frmFirstWGytgh.jingdu">经度：</string>
    <string name="frmFirstWGytgh.weidu">纬度：</string>
    <string name="frmFirstWGytgh.dixing">地形：</string>
    <string name="frmFirstWGytgh.tuzhileixing">土质类型：</string>
    <string name="frmFirstWGytgh.turangleixing">土壤类型：</string>
    <string name="frmFirstWGytgh.turangfeili">土壤肥力：</string>
    <string name="frmFirstWGytgh.modiTime">摸底时间：</string>
    <string name="frmFirstWGtrjc.wanggeID">网格编号：</string>
    <string name="frmFirstWGtrjc.youjizhi">有机质%：</string>
    <string name="frmFirstWGtrjc.hintyoujizhi">输入有机质百分比</string>
    <string name="frmFirstWGtrjc.PH">PH值：</string>
    <string name="frmFirstWGtrjc.hintPH">输入ph值</string>
    <string name="frmFirstWGtrjc.suxiaoN">速效氮%：</string>
    <string name="frmFirstWGtrjc.hintsuxiaoN">输入速效氮含量</string>
    <string name="frmFirstWGtrjc.suxiaoP">速效磷%：</string>
    <string name="frmFirstWGtrjc.hintsuxiaoP">输入速效磷含量</string>
    <string name="frmFirstWGtrjc.suxiaoK">速效钾%：</string>
    <string name="frmFirstWGtrjc.hintsuxiaoK">输入速效钾含量</string>
    <string name="frmFirstWGtrjc.Cl">氯%：</string>
    <string name="frmFirstWGtrjc.hintCl">输入氯含量</string>
    <string name="frmFirstWGtrjc.caiyangTime">采样时间：</string>
    <string name="frmFirstWGyylh.K">钾%：</string>
    <string name="frmFirstWGyylh.hintK">输入烟叶钾含量</string>
    <string name="frmFirstWGyylh.Cl">氯%：</string>
    <string name="frmFirstWGyylh.hintCl">输入烟叶氯含量</string>
    <string name="frmFirstWGyylh.yanjian">烟碱%：</string>
    <string name="frmFirstWGyylh.hintyanjian">输入烟碱含量</string>
    <string name="frmFirstWGyylh.huanyuantang">还原糖%：</string>
    <string name="frmFirstWGyylh.hinthuanyuantang">输入还原糖含量</string>
    <string name="frmFirstWGyylh.zongtang">总糖%：</string>
    <string name="frmFirstWGyylh.hintzongtang">输入总糖含量</string>
    <string name="frmFirstWGyylh.caiyangTime">采样时间：</string>
    <string name="frmFirstYMHymgc.dapengID">工场名称：</string>
    <string name="frmFirstYMHymgc.hintdapengID">请输入工场名称</string>
    <string name="frmFirstYMHymgc.yumiaohuName">育苗户姓名：</string>
    <string name="frmFirstYMHymgc.yanzhan">烟站：</string>
    <string name="frmFirstYMHymgc.xingzhengquhua">行政区划：</string>
    <string name="frmFirstYMHymgc.dapengNum">大棚数量：</string>
    <string name="frmFirstYMHymgc.hintdapengNum">请输入大棚数量</string>
    <string name="frmFirstYMHymgc.dapengjiegou">大棚结构：</string>
    <string name="frmFirstYMHymgc.hintdapengjiegou">请输入大棚结构</string>
    <string name="frmFirstYMHymgc.mianji">占地面积：</string>
    <string name="frmFirstYMHymgc.hintmianji">请输入大棚占地面积</string>
    <string name="frmFirstYMHymgc.yumiaoNum">育苗数量：</string>
    <string name="frmFirstYMHymgc.hintyumiaoNum">请输入育苗数量</string>
    <string name="frmFirstYMHymgc.xiujianshijian">修建时间：</string>
    <string name="frmFirstYMHymgc.dengjiren">登记人：</string>
    <string name="frmFirstYMHymgc.hintdengjiren">请输入登记人</string>
    <string name="frmFirstYMHymsp.yumiaohuName">育苗户姓名：</string>
    <string name="frmFirstYNynda.name">姓名:</string>
    <string name="frmFirstYNynda.inputhintname">输入姓名</string>
    <string name="frmFirstYNynda.IDcardNum">身份证号:</string>
    <string name="frmFirstYNynda.inputhintIDcardNum">输入身份证号</string>
    <string name="frmFirstYNynda.age">年龄:</string>
    <string name="frmFirstYNynda.inputhintIDcardNumYZ">先输入正确身份证号</string>
    <string name="frmFirstYNynda.sex">性别:</string>
    <string name="frmFirstYNynda.phoneNum">手机号:</string>
    <string name="frmFirstYNynda.inputhintphone">输入手机号</string>
    <string name="frmFirstYNynda.cultureLevel">文化程度:</string>
    <string name="frmFirstYNynda.zhongzhiAge">种植年限(年):</string>
    <string name="frmFirstYNynda.inputhintzhongzhiAge">输入种烟年限</string>
    <string name="frmFirstYNynda.zhongzhiLevel">种植水平</string>
    <string name="frmFirstYNynda.zhongzhiYears">种植年度:</string>
    <string name="frmFirstYNynda.zhongzhiArea">种植面积(亩):</string>
    <string name="frmFirstYNynda.credit">诚信度:</string>
    <string name="frmFirstYNynda.starPingding">星级评定:</string>
    <string name="frmFirstYNynda.yannongState">烟农状态:</string>
    <string name="frmFirstYNynda.wanggeFuzeren">烟技员:</string>
    <string name="frmFirstYNytda.yannongName">烟农姓名：</string>
    <string name="frmFirstYNytda.shiyongniandu">使用年度：</string>
    <string name="frmFirstYNytda.mianji">面积(亩)：</string>
    <string name="frmFirstYNytda.hintmianji">输入烟田面积</string>
    <string name="frmFirstYNytda.soiltsrc">土地来源：</string>
    <string name="frmFirstYNytda.lng">经度：</string>
    <string name="frmFirstYNytda.lat">纬度：</string>
    <string name="frmFirstYNytda.soiltype">土壤类型：</string>
    <string name="frmFirstYNytda.precrop">前茬作物：</string>
    <string name="frmFirstYNytda.dilishuiping">地力水平：</string>
    <string name="frmFirstYNytda.water">灌溉条件：</string>
    <string name="frmFirstYNytda.dixing">地形：</string>
    <string name="frmFirstYNzzsp.jibenxinxi">基础信息</string>
    <string name="frmFirstYNzzsp.yannongName">烟农姓名：</string>
    <string name="frmFirstYNzzsp.shengpiniandu">审批年度：</string>
    <string name="frmFirstYNzzsp.yanjiyuanShengpi">烟技员审批：</string>
    <string name="frmFirstYNzzsp.stopShengpi">烟站审批人：</string>
    <string name="frmFirstYNzzsp.yancaoleixing">烟草类型：</string>
    <string name="frmFirstYNzzsp.zhongzhimianji">种植面积(亩)：</string>
    <string name="frmFirstYNzzsp.hintzhongzhimianji">输入种植面积</string>
    <string name="frmFirstYNzzsp.shenpiren">审批人：</string>
    <string name="frmFirstYNzzsp.shenpizhuangtai">审批状态：</string>
    <string name="frmFirstYNhtgl.yannongName">烟农姓名：</string>
    <string name="frmFirstYNhtgl.hetongID">合同编号：</string>
    <string name="frmFirstYNhtgl.qianyueniandu">签约年度：</string>
    <string name="frmFirstYNhtgl.caoqianmianji">草签面积(亩)：</string>
    <string name="frmFirstYNhtgl.hintcaoqianmianji">输入草签面积</string>
    <string name="frmFirstYNhtgl.caoqianNum">草签数量：</string>
    <string name="frmFirstYNhtgl.hintcaoqianNum">输入草签数量</string>
    <string name="frmFirstYNhtgl.caoqianTime">草签时间：</string>
    <string name="frmFirstYNhtgl.jiaoxiao">暂不输入</string>
    <string name="frmFirstYNhtgl.jiaoxiaomianji">交销面积(亩)：</string>
    <string name="frmFirstYNhtgl.hintjiaoxiaomianji">输入交销面积</string>
    <string name="frmFirstYNhtgl.jiaoxiaoNum">交销数量：</string>
    <string name="frmFirstYNhtgl.hintjiaoxiaoNum">输入交销数量</string>
    <string name="frmFirstYNhtgl.qianyueTime">签约时间：</string>
    <string name="frmFirstYMHyumiaohu.yumiaohuName">姓名：</string>
    <string name="frmFirstYMHyumiaohu.inputhintname">输入姓名</string>
    <string name="frmFirstYMHyumiaohu.IDcardNum">身份证号:</string>
    <string name="frmFirstYMHyumiaohu.inputhintIDcardNum">输入身份证号</string>
    <string name="frmFirstYMHyumiaohu.age">年龄:</string>
    <string name="frmFirstYMHyumiaohu.inputhintIDcardNumYZ">先输入正确身份证号</string>
    <string name="frmFirstYMHyumiaohu.sex">性别:</string>
    <string name="frmFirstYMHyumiaohu.phoneNum">手机号:</string>
    <string name="frmFirstYMHyumiaohu.inputhintphone">输入手机号</string>
    <string name="frmFirstYMHyumiaohu.cultureLevel">文化程度:</string>
    <string name="frmFirstYMHyumiaohu.yumiaoYears">育苗年度:</string>
    <string name="frmFirstYMHyumiaohu.yumiaodian">育苗工场：</string>
    <string name="frmFirstYMHyumiaohu.yumiaoState">育苗户状态:</string>
    <string name="frmFirstYMHyumiaohu.wanggeFuzeren">网格负责人:</string>
    <string name="frmFirstYMHymsq.gongmiaohu">供苗户：</string>
    <string name="frmFirstYMHymsq.hintgongmiaohu">输入供苗户姓名</string>
    <string name="frmFirstYMHymsq.gongmiaoYear">供苗年度：</string>
    <string name="frmFirstYMHymsq.yanyeType">烟叶类型：</string>
    <string name="frmFirstYMHymsq.yumiaoNum">育苗数量：</string>
    <string name="frmFirstYMHymsq.hintyumiaoNum">输入育苗盆数</string>
    <string name="frmFirstYMHymsq.yumiaoMianji">育苗面积(亩)：</string>
    <string name="frmFirstYMHymsq.hintyumiaoMianji">输入育苗面积</string>
    <string name="frmFirstYMHymsq.yanjiyuanshenpi">烟技员审批：</string>
    <string name="frmFirstYMHymsq.stopshenpi">烟站审批人：</string>
    <string name="frmFirstYMHymsq.shenqingTime">申请时间：</string>
    <string name="frmFirstWZwaff.name">物资名称：</string>
    <string name="frmFirstWZwaff.hintname">输入物资名称</string>
    <string name="frmFirstWZwaff.danwei">物资单位：</string>
    <string name="frmFirstWZwaff.farmer">物资领取人：</string>
    <string name="frmFirstWZwaff.hintfarmer">输入领取人姓名</string>
    <string name="frmFirstWZwaff.num">物资数量：</string>
    <string name="frmFirstWZwaff.hintnum">输入物资数量</string>
    <string name="frmFirstWZwaff.money">物资金额(元)：</string>
    <string name="frmFirstWZwaff.hintmoney">输入物资总金额</string>
    <string name="frmForthSjql">数据清理</string>
    <string name="addMsg_time_hint">点击选择时间</string>
    <string name="addMsg_beizhu">备注:</string>
    <string name="addMsg_beizhu_hint">请输入备注信息</string>
    <string name="addMsg_biaozhun">参考标准:</string>
    <string name="addMsg_save">保存</string>
    <string name="addMsg_back">返回</string>
    <string name="addMsg_fangzhishijian">防治时间:</string>
    <string name="addMsg_yaowuming">用药名称:</string>
    <string name="addMsg_nongdu">浓度(%）:</string>
    <string name="addMsg_nongdu_hint">请输入浓度</string>
    <string name="addMsg_yaowuming_hint">请输入药物名称</string>
    <string name="addMsg_bingchongleixing">病虫害类型:</string>
    <string name="addMsg_fabinglv">病指/发病率（%）:</string>
    <string name="addMsg_fabinglv_hint">请录入发病率</string>
    <string name="addMsg_fabingmianji">发病面积（亩）:</string>
    <string name="addMsg_fabingmianji_hint">请录入发病面积</string>
    <string name="addMsg_yugusunshi">预估损失量（公斤）:</string>
    <string name="addMsg_yugusunshi_hint">请录入预估损失量</string>
    <string name="addMsg_fangzhifangshi">防治方式:</string>
    <string name="addMsg_fangzhifangshi_hint">请录入防治方式</string>
    <string name="addMsg_yumiaohu">育苗户:</string>
</resources>