<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add__yizai_guanli"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.nss.tobacco.activitymanagement.Add_BingchongFangzhiActivity">
    <include layout="@layout/item_title_addmsg"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2">
        <ImageView
            android:id="@+id/second_ym_bcfz_imageview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:src="@drawable/photo"/>
        <GridView
            android:id="@+id/second_ym_bcfz_gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/second_ym_bcfz_imageview"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:fadeScrollbars="true"
            android:fadingEdge="none"
            android:numColumns="3"
            android:scrollbars="none"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:stretchMode="columnWidth"
            >

        </GridView>
    </RelativeLayout>
    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_yumiaohu"/>
                <Spinner
                    android:id="@+id/second_ym_bcfz_farmer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:entries="@array/age" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第二行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_yaowuming"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_yongyaomingcheng"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:hint="@string/addMsg_yaowuming_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <include layout="@layout/item_line_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_nongdu"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_nongdu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:digits="1234567890."
                    android:inputType="number"
                    android:hint="@string/addMsg_nongdu_hint" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第三行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_fangzhifangshi"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_fangzhifangshi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:hint="@string/addMsg_fangzhifangshi_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <include layout="@layout/item_line_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_bingchongleixing"/>
                <Spinner
                    android:id="@+id/second_ym_bcfz_bingchonghaileixing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:gravity="center"
                    android:entries="@array/bingchongleixing" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第四行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_fabinglv"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_fabinglv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:digits="1234567890."
                    android:inputType="number"
                    android:hint="@string/addMsg_fabinglv_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <include layout="@layout/item_line_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_fabingmianji"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:digits="1234567890."
                    android:inputType="number"
                    android:hint="@string/addMsg_fabingmianji_hint" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第五行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_yugusunshi"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_yuguliang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:digits="1234567890."
                    android:inputType="number"
                    android:hint="@string/addMsg_yugusunshi_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <include layout="@layout/item_line_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_fangzhishijian"/>
                <TextView
                    android:id="@+id/second_ym_bcfz_fangzhiTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:hint="@string/addMsg_time_hint" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第六行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_biaozhun"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">
                    <ImageView
                        android:id="@+id/biaozhun_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--第七行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/addpage_text"
                    android:text="@string/addMsg_beizhu"/>
                <EditText
                    android:id="@+id/second_ym_bcfz_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/addpage_edit"
                    android:hint="@string/addMsg_beizhu_hint" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_line_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="@style/btnPadding">
        <Button
            android:id="@+id/second_ym_bcfz_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addMsg_save"
            style="@style/btnStyle"/>
        <Button
            android:id="@+id/second_ym_bcfz_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addMsg_back"
            style="@style/btnStyle"/>
    </LinearLayout>


</LinearLayout>
