<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray"
    tools:context="com.nss.tobacco.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/ico_login_account"/>
        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="#44666666"/>
        <EditText
            android:id="@+id/login_activity_edit_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:layout_marginLeft="8dp"
            android:hint="@string/Login_hintName"
            android:inputType="textPersonName"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/ico_login_password"/>
        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="#44666666"/>
        <EditText
            android:id="@+id/login_activity_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:layout_marginLeft="8dp"
            android:hint="@string/Login_hintPassword"
            android:inputType="text"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_activity_btnsure"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape"
        android:text="@string/Login_login"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

</LinearLayout>
